--- a/tutorial/causal-methods.html
+++ b/tutorial/causal-methods.html
@@ -29,10 +29,10 @@ current_page: causal-methods
   <p>OLS mixes these together. Your coefficient captures both the true effect of education and the fact that "education" is partly a proxy for ability. This is called <strong>omitted variable bias</strong>—ability affects both X and Y, but you can't measure it.</p>
 
   <div class="callout-info">
-    <h4>Famous IV Papers</h4>
+    <h4>IV in Practice</h4>
     <ul style="margin: 8px 0 0; padding-left: 18px;">
-      <li><strong>Angrist &amp; Krueger (1991), "Does Compulsory School Attendance Affect Schooling and Earnings?"</strong> <em>QJE.</em> Uses quarter of birth as an instrument for years of schooling. People born earlier in the year can drop out sooner due to compulsory attendance laws, generating exogenous variation in education. <a href="https://doi.org/10.2307/2937954" target="_blank">[Link]</a></li>
       <li><strong>Angrist (1990), "Lifetime Earnings and the Vietnam Era Draft Lottery"</strong> <em>AER.</em> Uses the draft lottery number as an instrument for military service. The lottery randomly assigned draft eligibility, creating exogenous variation in who served in Vietnam. <a href="https://doi.org/10.3386/w3514" target="_blank">[Link]</a></li>
+      <li><strong>Angrist &amp; Krueger (1991), "Does Compulsory School Attendance Affect Schooling and Earnings?"</strong> <em>QJE.</em> Uses quarter of birth as an instrument for years of schooling. People born earlier in the year can drop out sooner due to compulsory attendance laws, generating exogenous variation in education. <a href="https://doi.org/10.2307/2937954" target="_blank">[Link]</a></li>
       <li><strong>Gruber, Howard, Leder-Luis &amp; Caputi (2025), "Dying or Lying? For-Profit Hospices and End-of-Life Care"</strong> <em>AER.</em> Uses entry of for-profit hospices as an instrument to estimate the causal effect of hospice care on Medicare spending among Alzheimer's and dementia patients, finding that hospice enrollment reduces costs by offsetting more expensive treatments. <a href="https://doi.org/10.1257/aer.20230328" target="_blank">[Link]</a></li>
     </ul>
   </div>
@@ -227,11 +227,11 @@ stargazer.render_latex()  # or .render_html()</code></pre>
   <p>Difference-in-differences compares changes over time between a treated group and a control group. The key assumption is that both groups would have followed <strong>parallel trends</strong> in the absence of treatment.</p>
 
   <div class="callout-info">
-    <h4>Famous DiD Papers</h4>
+    <h4>DiD in Practice</h4>
     <ul style="margin: 8px 0 0; padding-left: 18px;">
       <li><strong>Card &amp; Krueger (1994), "Minimum Wages and Employment: A Case Study of the Fast-Food Industry in New Jersey and Pennsylvania"</strong> <em>AER.</em> Compares employment at fast-food restaurants in NJ (which raised its minimum wage) vs. PA (which didn't). Found no evidence that the minimum wage increase reduced employment—a result that reshaped the policy debate. <a href="https://doi.org/10.3386/w4509" target="_blank">[Link]</a></li>
-      <li><strong>Braghieri, Levy &amp; Makarin (2022), "Social Media and Mental Health"</strong> <em>AER.</em> Exploits the staggered rollout of Facebook across U.S. college campuses. Compares mental health outcomes at colleges that gained Facebook access to those that hadn't yet, finding that Facebook introduction worsened student mental health. <a href="https://doi.org/10.1257/aer.20211218" target="_blank">[Link]</a></li>
       <li><strong>Meinhofer, Witman, Hinde &amp; Simon (2021), "Marijuana Liberalization Policies and Perinatal Health"</strong> <em>Journal of Health Economics.</em> Uses a DiD design to study how state-level marijuana legalization policies affect pregnancy and birth outcomes. <a href="https://doi.org/10.1016/j.jhealeco.2021.102537" target="_blank">[Link]</a></li>
+      <li><strong>Braghieri, Levy &amp; Makarin (2022), "Social Media and Mental Health"</strong> <em>AER.</em> Exploits the staggered rollout of Facebook across U.S. college campuses. Compares mental health outcomes at colleges that gained Facebook access to those that hadn't yet, finding that Facebook introduction worsened student mental health. <a href="https://doi.org/10.1257/aer.20211218" target="_blank">[Link]</a></li>
     </ul>
   </div>
 
@@ -818,10 +818,10 @@ ggiplot(model) +
   <p>Regression discontinuity (RD) exploits a sharp threshold—a cutoff rule that determines who gets treated. When treatment is assigned based on whether someone crosses a threshold (e.g., a test score, age, income level), you can compare outcomes for people just barely above and just barely below the cutoff. These nearly-identical groups differ only in treatment status, creating a quasi-experimental setting.</p>
 
   <div class="callout-info">
-    <h4>Famous RD Papers</h4>
+    <h4>RD in Practice</h4>
     <ul style="margin: 8px 0 0; padding-left: 18px;">
-      <li><strong>Almond &amp; Doyle (2011), "After Midnight: A Regression Discontinuity Design in Length of Postpartum Hospital Stays"</strong> <em>AEJ: Economic Policy.</em> Uses the midnight births cutoff: babies born just after midnight get counted as a new hospital day, leading to longer postpartum stays than babies born just before midnight. This discontinuity in hospital stay length lets them estimate the effect of extra hospital time on newborn health. <a href="https://doi.org/10.1257/pol.3.3.1" target="_blank">[Link]</a></li>
       <li><strong>Almond, Doyle, Kowalski &amp; Williams (2010), "Estimating Marginal Returns to Medical Care: Evidence from At-risk Newborns"</strong> <em>QJE.</em> Exploits the "very low birth weight" (VLBW) classification at 1,500 grams. Newborns just below this cutoff receive substantially more medical care, allowing the authors to estimate whether the extra treatment improves infant health outcomes. <a href="https://doi.org/10.1162/qjec.2010.125.2.591" target="_blank">[Link]</a></li>
+      <li><strong>Almond &amp; Doyle (2011), "After Midnight: A Regression Discontinuity Design in Length of Postpartum Hospital Stays"</strong> <em>AEJ: Economic Policy.</em> Uses the midnight births cutoff: babies born just after midnight get counted as a new hospital day, leading to longer postpartum stays than babies born just before midnight. This discontinuity in hospital stay length lets them estimate the effect of extra hospital time on newborn health. <a href="https://doi.org/10.1257/pol.3.3.1" target="_blank">[Link]</a></li>
     </ul>
   </div>
 
