Update intro: three strategies for this class, DD first, remove RCT

--- a/tutorial/causal-methods.html
+++ b/tutorial/causal-methods.html
@@ -8,9 +8,9 @@ current_page: causal-methods
 
 <!-- Growth Mindset Message -->
 <div class="callout-success">
-  <strong>Four Identification Strategies</strong>
+  <strong>Three Identification Strategies</strong>
   <p style="margin: 8px 0 0;">
-    You have four main tools in your toolbox: IV uses an "experiment-like" random shock to your treatment; DiD/Event Studies compare treated and control groups before and after treatment; RD exploits a threshold or cutoff; and sometimes you find a real random experiment (RCT). Understanding when to use each is key.
+    You have three main tools in your toolkit for this class: DiD/Event Studies compare treated and control groups before and after treatment; IV uses an "experiment-like" random shock to your treatment; and RD exploits a threshold or cutoff. Understanding when to use each is key.
   </p>
 </div>
 
