Clarify: most students use DiD/Event Studies

--- a/tutorial/causal-methods.html
+++ b/tutorial/causal-methods.html
@@ -10,7 +10,7 @@ current_page: causal-methods
 <div class="callout-success">
   <strong>Three Identification Strategies</strong>
   <p style="margin: 8px 0 0;">
-    You have three main tools in your toolkit for this class: DiD/Event Studies compare treated and control groups before and after treatment; IV uses an "experiment-like" random shock to your treatment; and RD exploits a threshold or cutoff. Most students will use DiD for this class. Understanding when to use each is key.
+    You have three main tools in your toolkit for this class: DiD/Event Studies compare treated and control groups before and after treatment; IV uses an "experiment-like" random shock to your treatment; and RD exploits a threshold or cutoff. Most students will use DiD/Event Studies for this class. Understanding when to use each is key.
   </p>
 </div>
 
