Move DiD note to top of DiD section, remove from intro

--- a/tutorial/causal-methods.html
+++ b/tutorial/causal-methods.html
@@ -10,7 +10,7 @@ current_page: causal-methods
 <div class="callout-success">
   <strong>Three Identification Strategies</strong>
   <p style="margin: 8px 0 0;">
-    You have three main tools in your toolkit for this class: DiD/Event Studies compare treated and control groups before and after treatment; IV uses an "experiment-like" random shock to your treatment; and RD exploits a threshold or cutoff. Most students will use DiD/Event Studies for this class. Understanding when to use each is key.
+    You have three main tools in your toolkit for this class: DiD/Event Studies compare treated and control groups before and after treatment; IV uses an "experiment-like" random shock to your treatment; and RD exploits a threshold or cutoff. Understanding when to use each is key.
   </p>
 </div>
 
@@ -223,6 +223,10 @@ stargazer.render_latex()  # or .render_html()</code></pre>
 
 <section id="did" class="tutorial-section">
   <h2>Difference-in-Differences</h2>
+
+  <div class="callout-success">
+    <strong>Most students will use DiD/Event Studies for this class.</strong>
+  </div>
 
   <p>Difference-in-differences compares changes over time between a treated group and a control group. The key assumption is that both groups would have followed <strong>parallel trends</strong> in the absence of treatment.</p>
 
