Update Stata install instructions to point to econ-help.mit.edu

--- a/tutorial/getting-started.html
+++ b/tutorial/getting-started.html
@@ -60,7 +60,16 @@ current_page: getting-started
   <h2>Installation</h2>
 
   <h3>Stata</h3>
-  <p>MIT provides Stata licenses for students. Visit the <a href="https://ist.mit.edu/stata" target="_blank">MIT IST Stata page</a> to download and install.</p>
+  <p>MIT provides Stata licenses for students:</p>
+  <ol>
+    <li>Go to <a href="https://econ-help.mit.edu/" target="_blank">econ-help.mit.edu</a></li>
+    <li>Look under <strong>Desktop</strong> and find <strong>Department Wide StataNow/SE License</strong></li>
+    <li>Log in with your MIT credentials</li>
+    <li>Download Stata (StataNow) for your OS (Windows, Mac, or Linux)</li>
+    <li>Download the PDF with the license information</li>
+    <li>Install Stata, then copy the license information from the PDF into the registration prompt to activate it</li>
+  </ol>
+  <p>Stata is also available via the <a href="https://ist.mit.edu/stata" target="_blank">MIT IST Stata page</a>, but that appears to be for Athena systems only.</p>
 
   <h3>R and RStudio</h3>
   <p>R is free and open-source. You'll also want RStudio, which provides a much nicer interface.</p>
