Update RStudio wording, add text editors section to programming tips

--- a/tutorial/auxiliary-programming-tips.html
+++ b/tutorial/auxiliary-programming-tips.html
@@ -8,6 +8,26 @@ current_page: auxiliary-programming-tips
 
 <p>This is an auxiliary module covering practical programming habits that make your research more reproducible and efficient. These skills aren't essential, but they'll save you time and prevent bugs.</p>
 
+<section id="code-is-text" class="tutorial-section">
+  <h2>Software Is Just Text Files</h2>
+
+  <p>Here's something that's easy to miss when you're starting out: Stata code, R code, and Python code are all just plain text files. A <code>.do</code> file is a text file. A <code>.R</code> file is a text file. A <code>.py</code> file is a text file. You could open any of them in Notepad and read them.</p>
+
+  <p>Programs like the Stata visual editor or RStudio make running that code easier and prettier, but they aren't necessary. They're just convenient wrappers around the text.</p>
+
+  <p>I use <a href="https://code.visualstudio.com/" target="_blank">VS Code</a> as my text editor for everything. This lets me:</p>
+
+  <ul>
+    <li><strong>See programs in different languages in one place.</strong> I can have a Stata <code>.do</code> file, an R script, and a Python script all open side by side.</li>
+    <li><strong>Use helpful extensions.</strong> VS Code has extensions for syntax highlighting, linters (which catch mistakes before you run the code), AI agents, and more.</li>
+    <li><strong>Use the integrated terminal.</strong> VS Code has a built-in command line, so I can run scripts directly from the terminal right next to the code I'm editing.</li>
+  </ul>
+
+  <p>You can download VS Code for free at <a href="https://code.visualstudio.com/" target="_blank">code.visualstudio.com</a>. Other popular text editors include <a href="https://www.sublimetext.com/" target="_blank">Sublime Text</a>, <a href="https://atom-editor.cc/" target="_blank">Atom</a>, and <a href="https://www.vim.org/" target="_blank">Vim</a> (if you enjoy a challenge).</p>
+
+  <p>You don't need to use any of these, but if you find yourself switching between the Stata editor, RStudio, and a terminal window, a single editor that handles all of them can simplify your workflow.</p>
+</section>
+
 <section id="unix-vs-windows" class="tutorial-section">
   <h2>Unix vs. Windows: What You Need to Know</h2>
 
