--- a/tutorial/getting-started.html
+++ b/tutorial/getting-started.html
@@ -72,7 +72,7 @@ current_page: getting-started
   <p>Stata is also available via the <a href="https://ist.mit.edu/stata" target="_blank">MIT IST Stata page</a>, but that appears to be for Athena systems only.</p>
 
   <h3>R and RStudio</h3>
-  <p>R is free and open-source. You'll also want RStudio, which provides a much nicer interface.</p>
+  <p>R is free and open-source. You may also want RStudio, which provides a nicer interface.</p>
 
   <p><strong>Option 1: Graphical installers</strong></p>
   <ol>
