--- a/tutorial/auxiliary-programming-tips.html
+++ b/tutorial/auxiliary-programming-tips.html
@@ -23,7 +23,7 @@ current_page: auxiliary-programming-tips
     <li><strong>Use the integrated terminal.</strong> VS Code has a built-in command line, so I can run scripts directly from the terminal right next to the code I'm editing.</li>
   </ul>
 
-  <p>You can download VS Code for free at <a href="https://code.visualstudio.com/" target="_blank">code.visualstudio.com</a>. Other popular text editors include <a href="https://www.sublimetext.com/" target="_blank">Sublime Text</a>, <a href="https://atom-editor.cc/" target="_blank">Atom</a>, and <a href="https://www.vim.org/" target="_blank">Vim</a> (if you enjoy a challenge).</p>
+  <p>You can download VS Code for free at <a href="https://code.visualstudio.com/" target="_blank">code.visualstudio.com</a>. Other popular text editors include <a href="https://www.sublimetext.com/" target="_blank">Sublime Text</a>, <a href="https://atom-editor.cc/" target="_blank">Atom</a>, and <a href="https://www.cursor.com/" target="_blank">Cursor</a> (which is built on VS Code with extra AI features).</p>
 
   <p>You don't need to use any of these, but if you find yourself switching between the Stata editor, RStudio, and a terminal window, a single editor that handles all of them can simplify your workflow.</p>
 </section>
