--- a/tutorial/worked-examples/texting-bans-event-study.html
+++ b/tutorial/worked-examples/texting-bans-event-study.html
@@ -216,8 +216,9 @@ save `combined', emptyok
 forvalues year = 2007/2022 {
     import delimited "data/raw/accident_`year'.csv", clear
 
-    * Keep only variables we need
-    keep state statename year month fatals
+    * Keep only variables we need (FARS uses uppercase column names)
+    keep STATE STATENAME YEAR MONTH FATALS
+    rename *, lower
 
     append using `combined'
     save `combined', replace
@@ -348,6 +349,18 @@ policy <- read_csv("data/raw/texting_ban_dates.csv",
 head(policy, 10)</code></pre>
         </div>
 
+        <div class="key-principle">
+          <h4>Policy Data Format</h4>
+          <p>The <code>texting_ban_dates.csv</code> file contains the following columns:</p>
+          <ul>
+            <li><strong>state</strong>: Numeric FIPS code (1-56) matching the FARS <code>state</code> column</li>
+            <li><strong>state_name</strong>: Full state name (e.g., "Alabama", "Montana")</li>
+            <li><strong>texting_ban_year</strong>: Year the texting ban took effect (NA for states without a ban)</li>
+            <li><strong>primary_enforcement</strong>: 1 if the ban has primary enforcement (police can stop drivers solely for texting), 0 if secondary enforcement only</li>
+          </ul>
+          <p>Montana is the only state without a texting ban during this period, so its <code>texting_ban_year</code> is NA. The <code>state</code> column uses numeric FIPS codes that match the FARS data, making the merge straightforward.</p>
+        </div>
+
         <h3>Merge and Create Treatment Variables</h3>
 
         <div class="code-block">
@@ -412,6 +425,118 @@ write_csv(analysis_data, "data/clean/analysis_data.csv")</code></pre>
           <h4>Event Time</h4>
           <p><code>event_time = year - texting_ban_year</code> measures years relative to treatment. Negative values are pre-treatment, zero is the treatment year, and positive values are post-treatment. This is the key variable for our event study.</p>
         </div>
+
+        <h3>Merge Economic Controls</h3>
+        <p>State and year fixed effects control for time-invariant state characteristics and common year shocks, but they don't control for things that vary <em>both</em> across states <em>and</em> over time. If economic conditions differ across states and correlate with when states adopt texting bans, we could have a problem. We'll add state-level unemployment and per capita income from <a href="https://fred.stlouisfed.org/" target="_blank">FRED</a>.</p>
+
+        <div class="code-block">
+          <div class="code-header">
+            <div class="code-tabs">
+              <button class="code-tab active" data-lang="stata">Stata</button>
+              <button class="code-tab" data-lang="r">R</button>
+            </div>
+            <button class="copy-btn" onclick="copyCode(this)">Copy</button>
+          </div>
+          <pre class="code-content stata active"><code class="language-stata">* Download state unemployment from FRED
+* Each state has a series like "ALUR" (Alabama), "AKUR" (Alaska), etc.
+* We download each, extract the annual average, and merge.
+
+* State abbreviations and FIPS codes for FRED series
+local st_abbr AL AK AZ AR CA CO CT DE FL GA HI ID IL IN IA KS KY LA ME MD MA MI MN MS MO MT NE NV NH NJ NM NY NC ND OH OK OR PA RI SC SD TN TX UT VT VA WA WV WI WY
+
+tempfile unemp_all
+clear
+gen state = .
+gen year = .
+gen unemployment = .
+save `unemp_all', replace
+
+local i = 0
+foreach st of local st_abbr {
+    local i = `i' + 1
+    capture {
+        * Download unemployment rate
+        local url "https://fred.stlouisfed.org/graph/fredgraph.csv?id=`st'UR"
+        copy "`url'" "data/raw/fred_temp.csv", replace
+        import delimited "data/raw/fred_temp.csv", clear varnames(1)
+        gen year = real(substr(observation_date, 1, 4))
+        rename *ur unemployment_val
+        keep if year >= 2007 & year <= 2022
+        collapse (mean) unemployment = unemployment_val, by(year)
+        gen state = `i'
+        append using `unemp_all'
+        save `unemp_all', replace
+    }
+}
+
+* Merge to analysis data
+use "data/clean/analysis_data.dta", clear
+merge 1:1 state year using `unemp_all', nogen keep(master match)
+
+* Similarly for per capita income (series: [ST]PCPI)
+* [Same pattern with PCPI suffix - omitted for brevity]
+
+save "data/clean/analysis_data.dta", replace</code></pre>
+          <pre class="code-content r"><code class="language-r"># Download state unemployment and income from FRED
+# Each state has a FRED series: e.g., "ALUR" for Alabama unemployment
+pacman::p_load(tidyverse)
+
+# State abbreviations for FRED series
+state_codes <- c(
+  "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "FL", "GA",
+  "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
+  "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ",
+  "NM", "NY", "NC", "ND", "OH", "OK", "OR", "PA", "RI", "SC",
+  "SD", "TN", "TX", "UT", "VT", "VA", "WA", "WV", "WI", "WY"
+)
+
+# Download unemployment (series: [ST]UR)
+all_unemp <- map_dfr(state_codes, function(st) {
+  url <- paste0("https://fred.stlouisfed.org/graph/fredgraph.csv?id=", st, "UR")
+  tryCatch({
+    df <- read_csv(url, show_col_types = FALSE)
+    names(df) <- c("date", "unemployment")
+    df |>
+      mutate(year = as.integer(substr(date, 1, 4))) |>
+      filter(year >= 2007, year <= 2022) |>
+      group_by(year) |>
+      summarise(unemployment = mean(unemployment, na.rm = TRUE)) |>
+      mutate(state_abbr = st)
+  }, error = function(e) NULL)
+})
+
+# Download per capita income (series: [ST]PCPI)
+all_income <- map_dfr(state_codes, function(st) {
+  url <- paste0("https://fred.stlouisfed.org/graph/fredgraph.csv?id=", st, "PCPI")
+  tryCatch({
+    df <- read_csv(url, show_col_types = FALSE)
+    names(df) <- c("date", "income")
+    df |>
+      mutate(year = as.integer(substr(date, 1, 4))) |>
+      filter(year >= 2007, year <= 2022) |>
+      group_by(year) |>
+      summarise(income = mean(income, na.rm = TRUE)) |>
+      mutate(state_abbr = st)
+  }, error = function(e) NULL)
+})
+
+# Merge to analysis data (need state abbreviation mapping)
+# FARS uses numeric FIPS codes in the 'state' column
+state_fips_map <- tibble(
+  state = c(1,2,4,5,6,8,9,10,12,13,15,16,17,18,19,20,21,22,23,24,
+            25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,
+            44,45,46,47,48,49,50,51,53,54,55,56),
+  state_abbr = state_codes
+)
+
+analysis_data <- analysis_data |>
+  left_join(state_fips_map, by = "state") |>
+  left_join(all_unemp, by = c("state_abbr", "year")) |>
+  left_join(all_income, by = c("state_abbr", "year")) |>
+  select(-state_abbr)
+
+write_csv(analysis_data, "data/clean/analysis_data.csv")</code></pre>
+        </div>
       </section>
 
       <section id="event-study" class="tutorial-section">
@@ -422,7 +547,7 @@ write_csv(analysis_data, "data/clean/analysis_data.csv")</code></pre>
         <h3>The Model</h3>
         <p>We estimate:</p>
         <div style="background: var(--bg-subtle); padding: 20px; border-radius: 8px; margin: 20px 0; font-family: 'Latin Modern Roman', serif; text-align: center;">
-          <p style="margin: 0;">Y<sub>st</sub> = &alpha;<sub>s</sub> + &gamma;<sub>t</sub> + &sum;<sub>k&ne;-1</sub> &beta;<sub>k</sub> &times; 1[K<sub>st</sub> = k] + &epsilon;<sub>st</sub></p>
+          <p style="margin: 0;">Y<sub>st</sub> = &alpha;<sub>s</sub> + &gamma;<sub>t</sub> + &sum;<sub>k&ne;-1</sub> &beta;<sub>k</sub> &times; 1[K<sub>st</sub> = k] + X<sub>st</sub>&delta; + &epsilon;<sub>st</sub></p>
         </div>
 
         <p>Where:</p>
@@ -431,6 +556,7 @@ write_csv(analysis_data, "data/clean/analysis_data.csv")</code></pre>
           <li>&gamma;<sub>t</sub> = year fixed effects</li>
           <li>K<sub>st</sub> = event time (years since treatment)</li>
           <li>&beta;<sub>k</sub> = effect at event time k, relative to k = -1</li>
+          <li>X<sub>st</sub> = time-varying controls (unemployment, income)</li>
         </ul>
 
         <h3>Create Event Time Dummies</h3>
@@ -499,7 +625,8 @@ gen ln_fatalities = ln(fatalities)
 
 * Event study with two-way fixed effects
 reghdfe ln_fatalities et_m6 et_m5 et_m4 et_m3 et_m2 ///
-    et_p0 et_p1 et_p2 et_p3 et_p4 et_p5 et_p6, ///
+    et_p0 et_p1 et_p2 et_p3 et_p4 et_p5 et_p6 ///
+    unemployment income, ///
     absorb(state year) cluster(state)
 
 * Store estimates for plotting
@@ -525,7 +652,7 @@ analysis_data <- analysis_data |>
 #
 # See: https://lrberge.github.io/fixest/articles/fixest_walkthrough.html
 event_study <- feols(
-  ln_fatalities ~ i(event_time_binned, ever_treated, ref = c(-1, -1000)) | state + year,
+  ln_fatalities ~ i(event_time_binned, ever_treated, ref = c(-1, -1000)) + unemployment + income | state + year,
   data = analysis_data,
   cluster = ~state
 )
