--- a/tutorial/worked-examples/texting-bans-event-study.html
+++ b/tutorial/worked-examples/texting-bans-event-study.html
@@ -333,7 +333,8 @@ write_csv(state_year, "data/clean/state_year_fatalities.csv")</code></pre>
 import delimited "data/raw/texting_ban_dates.csv", clear
 
 * Handle missing values for Montana (no ban)
-replace texting_ban_year = . if texting_ban_year == .
+* If CSV has "NA", import delimited reads it as a string; convert to numeric
+destring texting_ban_year, replace force
 
 save "data/clean/texting_ban_dates.dta", replace
 
@@ -416,7 +417,7 @@ analysis_data <- state_year |>
 
 # Check treatment timing
 analysis_data |> count(texting_ban_year)
-analysis_data |> filter(!is.na(event_time)) |> count(event_time)
+analysis_data |> filter(event_time != -1000) |> count(event_time)
 
 write_csv(analysis_data, "data/clean/analysis_data.csv")</code></pre>
         </div>
@@ -437,13 +438,15 @@ write_csv(analysis_data, "data/clean/analysis_data.csv")</code></pre>
             </div>
             <button class="copy-btn" onclick="copyCode(this)">Copy</button>
           </div>
-          <pre class="code-content stata active"><code class="language-stata">* Download state unemployment from FRED
+          <pre class="code-content stata active"><code class="language-stata">* Download state unemployment and income from FRED
 * Each state has a series like "ALUR" (Alabama), "AKUR" (Alaska), etc.
 * We download each, extract the annual average, and merge.
 
-* State abbreviations and FIPS codes for FRED series
+* State abbreviations and their FIPS codes (FARS uses FIPS, not sequential IDs)
 local st_abbr AL AK AZ AR CA CO CT DE FL GA HI ID IL IN IA KS KY LA ME MD MA MI MN MS MO MT NE NV NH NJ NM NY NC ND OH OK OR PA RI SC SD TN TX UT VT VA WA WV WI WY
+local st_fips  1  2  4  5  6  8  9 10 12 13 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 44 45 46 47 48 49 50 51 53 54 55 56
 
+* --- Download unemployment (series: [ST]UR) ---
 tempfile unemp_all
 clear
 gen state = .
@@ -451,30 +454,53 @@ gen year = .
 gen unemployment = .
 save `unemp_all', replace
 
-local i = 0
-foreach st of local st_abbr {
-    local i = `i' + 1
+local n : word count `st_abbr'
+forvalues j = 1/`n' {
+    local st : word `j' of `st_abbr'
+    local fips : word `j' of `st_fips'
     capture {
-        * Download unemployment rate
         local url "https://fred.stlouisfed.org/graph/fredgraph.csv?id=`st'UR"
         copy "`url'" "data/raw/fred_temp.csv", replace
         import delimited "data/raw/fred_temp.csv", clear varnames(1)
-        gen year = real(substr(observation_date, 1, 4))
+        gen year = real(substr(date, 1, 4))
         rename *ur unemployment_val
         keep if year >= 2007 & year <= 2022
         collapse (mean) unemployment = unemployment_val, by(year)
-        gen state = `i'
+        gen state = `fips'
         append using `unemp_all'
         save `unemp_all', replace
+    }
+}
+
+* --- Download per capita income (series: [ST]PCPI) ---
+tempfile income_all
+clear
+gen state = .
+gen year = .
+gen income = .
+save `income_all', replace
+
+forvalues j = 1/`n' {
+    local st : word `j' of `st_abbr'
+    local fips : word `j' of `st_fips'
+    capture {
+        local url "https://fred.stlouisfed.org/graph/fredgraph.csv?id=`st'PCPI"
+        copy "`url'" "data/raw/fred_temp.csv", replace
+        import delimited "data/raw/fred_temp.csv", clear varnames(1)
+        gen year = real(substr(date, 1, 4))
+        rename *pcpi income_val
+        keep if year >= 2007 & year <= 2022
+        collapse (mean) income = income_val, by(year)
+        gen state = `fips'
+        append using `income_all'
+        save `income_all', replace
     }
 }
 
 * Merge to analysis data
 use "data/clean/analysis_data.dta", clear
 merge 1:1 state year using `unemp_all', nogen keep(master match)
-
-* Similarly for per capita income (series: [ST]PCPI)
-* [Same pattern with PCPI suffix - omitted for brevity]
+merge 1:1 state year using `income_all', nogen keep(master match)
 
 save "data/clean/analysis_data.dta", replace</code></pre>
           <pre class="code-content r"><code class="language-r"># Download state unemployment and income from FRED
@@ -688,9 +714,9 @@ coefplot event_study, ///
     keep(et_*) ///
     vertical ///
     yline(0, lcolor(red) lpattern(dash)) ///
-    xline(6.5, lcolor(gray) lpattern(dash)) ///
-    xlabel(1 "-6" 2 "-5" 3 "-4" 4 "-3" 5 "-2" 6 "-1" ///
-           7 "0" 8 "1" 9 "2" 10 "3" 11 "4" 12 "5" 13 "6") ///
+    xline(5.5, lcolor(gray) lpattern(dash)) ///
+    xlabel(1 "-6" 2 "-5" 3 "-4" 4 "-3" 5 "-2" ///
+           6 "0" 7 "1" 8 "2" 9 "3" 10 "4" 11 "5" 12 "6") ///
     xtitle("Years Relative to Texting Ban") ///
     ytitle("Effect on Log Fatalities") ///
     title("Event Study: Texting Bans and Traffic Fatalities") ///
